fixed right spacing on contact.html

--- a/contact.css
+++ b/contact.css
@@ -58,6 +58,4 @@ img{
     height: 10vh;
     width: 100%;
     border: 5px;
-    margin-left: 40px;
-    margin-top: 30px;   
 }
